--- a/src/main/resources/views/gameSettings.fxml
+++ b/src/main/resources/views/gameSettings.fxml
@@ -32,9 +32,17 @@
          <children>
             <HBox prefHeight="81.0" prefWidth="483.0">
                <children>
-                  <Button mnemonicParsing="false" onMouseClicked="#decreaseLetter" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&lt;">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Letters:">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
                      <HBox.margin>
-                        <Insets left="155.0" top="20.0" />
+                        <Insets top="25.0" />
+                     </HBox.margin>
+                  </Text>
+                  <Button mnemonicParsing="false" onMouseClicked="#decreaseLetter" prefHeight="34.0" prefWidth="34.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="&lt;">
+                     <HBox.margin>
+                        <Insets left="68.0" top="20.0" />
                      </HBox.margin>
                      <font>
                         <Font name="Chalkboard" size="18.0" />
@@ -62,7 +70,7 @@
                         <Font name="Chalkboard" size="24.0" />
                      </font>
                   </Text>
-                  <Button mnemonicParsing="false" onMouseClicked="#decreaseValue" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
+                  <Button mnemonicParsing="false" onMouseClicked="#decreaseValue" prefHeight="34.0" prefWidth="34.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
                      <HBox.margin>
                         <Insets left="88.0" right="10.0" />
                      </HBox.margin>
@@ -70,7 +78,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="value" prefHeight="27.0" prefWidth="27.0">
+                  <TextField fx:id="value" prefHeight="27.0" prefWidth="27.0" text="1">
                      <HBox.margin>
                         <Insets top="5.0" />
                      </HBox.margin>
@@ -106,7 +114,7 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="distribution" prefHeight="27.0" prefWidth="27.0">
+                  <TextField fx:id="distribution" prefHeight="27.0" prefWidth="27.0" text="9">
                      <HBox.margin>
                         <Insets left="10.0" top="15.0" />
                      </HBox.margin>
@@ -121,11 +129,26 @@
                   </Button>
                </children>
             </HBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Upload Dictionary:">
-               <font>
-                  <Font name="Chalkboard" size="24.0" />
-               </font>
-            </Text>
+            <HBox prefHeight="55.0" prefWidth="483.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Upload Dictionary:">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Joker Distribution:">
+                     <font>
+                        <Font name="Chalkboard" size="24.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="80.0" top="10.0" />
+                     </HBox.margin>
+                  </Text>
+               </children>
+            </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <TextField fx:id="dictionary" prefHeight="27.0" prefWidth="197.0">
@@ -140,6 +163,27 @@
                      <font>
                         <Font name="Chalkboard" size="18.0" />
                      </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onMouseClicked="#decreaseJoker" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="-">
+                     <font>
+                        <Font name="Chalkboard" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="50.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <TextField fx:id="joker" prefHeight="27.0" prefWidth="27.0" text="2">
+                     <HBox.margin>
+                        <Insets left="15.0" right="15.0" top="15.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" onMouseClicked="#increaseJoker" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="+">
+                     <font>
+                        <Font name="Chalkboard" size="18.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
                   </Button>
                </children>
             </HBox>
