--- a/src/main/resources/views/playerProfileView.fxml
+++ b/src/main/resources/views/playerProfileView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.PlayerProfileController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.PlayerProfileController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="Player Profile" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
@@ -203,13 +203,21 @@
                                 </Label>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
-                              <Button contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#deleteProfile" prefHeight="35.0" prefWidth="65.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Delete" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
+                              <Button layoutX="132.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#editProfile" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Edit">
                                  <font>
                                     <Font name="Chalkboard" size="14.0" />
                                  </font>
                               </Button>
                            </children>
                         </AnchorPane>
+                        <Button contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#deleteProfile" prefHeight="35.0" prefWidth="65.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Delete" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                           <font>
+                              <Font name="Chalkboard" size="14.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets left="120.0" top="15.0" />
+                           </GridPane.margin>
+                        </Button>
                             </children>
                         </GridPane>
                     </children>
