--- a/src/main/resources/stylesheets/labelstyle.css
+++ b/src/main/resources/stylesheets/labelstyle.css
@@ -65,6 +65,16 @@
     -fx-border-radius: 4;
 }
 
+.tileBottomSelected {
+    -fx-background-color: #EDECE1;
+    -fx-background-radius: 4;
+    -fx-font-family: "Chalkboard";
+    -fx-font-size: 18px;
+    -fx-border-color: black;
+    -fx-border-radius: 4;
+    -fx-effect: innershadow(gaussian, rgba(0, 0, 0, 0.7), 10, 0, 0, 0);
+}
+
 .digit {
     -fx-font-family: "Chalkboard";
     -fx-font-size: 14px;
