--- a/src/main/resources/views/ipError.fxml
+++ b/src/main/resources/views/ipError.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -10,28 +11,39 @@
    <children>
       <VBox prefHeight="169.0" prefWidth="183.0" style="-fx-background-color: #fbf8da #fbf8da #fbf8da #fbf8da;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="The Game will">
+            <Button mnemonicParsing="false" onMouseClicked="#closeErrorMessage" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="X">
+               <font>
+                  <Font name="Chalkboard" size="18.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets left="160.0" top="10.0" />
+               </VBox.margin>
+            </Button>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invalid IP ">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="15.0" top="15.0" />
+                  <Insets left="50.0" />
                </VBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="start soon!">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Adress.">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="35.0" />
+                  <Insets left="65.0" />
                </VBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Good Luck!">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Try again please!">
                <font>
                   <Font name="Chalkboard" size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets left="35.0" top="20.0" />
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Text>
          </children>
