--- a/src/main/resources/views/gameView.fxml
+++ b/src/main/resources/views/gameView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1152.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.GameViewController">
     <children>
         <Label alignment="CENTER" contentDisplay="CENTER" layoutX="268.0" layoutY="321.0" prefHeight="80.0" style="-fx-background-color: #fdf8da;" text="SCRABBLE" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <font>
@@ -235,7 +235,7 @@
             <left>
                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="353.0" spacing="30.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Label alignment="CENTER" onMouseClicked="#tiles" prefHeight="55.0" prefWidth="90.0" style="-fx-background-color: #edece1; -fx-background-radius: 7; -fx-border-color: black; -fx-border-radius: 7; -fx-effect: innershadow(gaussian, rgba(0,0,0,0.7), 7,0,0,0);" text="Tiles">
+                        <Label fx:id="bag" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#tiles" prefHeight="55.0" prefWidth="120.0" style="-fx-background-color: #edece1; -fx-background-radius: 7; -fx-border-color: black; -fx-border-radius: 7; -fx-effect: innershadow(gaussian, rgba(0,0,0,0.7), 7,0,0,0);" text="Exchange&#10;Tiles" textAlignment="CENTER">
                             <font>
                                 <Font name="Chalkboard" size="18.0" />
                             </font>
@@ -243,7 +243,7 @@
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Label>
-                        <Button mnemonicParsing="false" onMouseClicked="#shuffle" prefHeight="55.0" prefWidth="90.0" style="-fx-background-color: #edece1;" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Shuffle">
+                        <Button mnemonicParsing="false" onMouseClicked="#shuffle" prefHeight="55.0" prefWidth="120.0" style="-fx-background-color: #edece1;" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Shuffle">
                             <font>
                                 <Font name="Chalkboard" size="18.0" />
                             </font>
