--- a/src/main/resources/views/gameView.fxml
+++ b/src/main/resources/views/gameView.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -36,8 +38,28 @@
         </Button>
         <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
             <left>
-                <VBox alignment="CENTER" prefHeight="520.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+                <VBox alignment="CENTER_LEFT" prefHeight="520.0" prefWidth="300.0" BorderPane.alignment="CENTER_LEFT">
                     <children>
+                  <HBox alignment="CENTER_LEFT" prefHeight="75.0" prefWidth="200.0">
+                     <children>
+                        <Label styleClass="time" stylesheets="@../stylesheets/buttonstyle.css" text="Time left:">
+                           <font>
+                              <Font name="Chalkboard" size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="30.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label fx:id="time" styleClass="time" stylesheets="@../stylesheets/buttonstyle.css" text="...sec">
+                           <font>
+                              <Font name="Chalkboard" size="20.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                         <HBox alignment="CENTER_LEFT" onMouseClicked="#playerOne" prefHeight="100.0" prefWidth="200.0">
                             <children>
                                 <ImageView fitHeight="65.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
@@ -48,7 +70,7 @@
                                         <Insets left="30.0" right="10.0" />
                                     </HBox.margin>
                                 </ImageView>
-                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="146.0" spacing="3.0">
+                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="120.0" spacing="3.0">
                                     <children>
                                         <Label fx:id="player1" text="Player 1">
                                             <font>
@@ -65,6 +87,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
+                        <Label fx:id="turn1" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -80,7 +103,7 @@
                                         <Insets left="30.0" right="10.0" />
                                     </HBox.margin>
                                 </ImageView>
-                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="146.0" spacing="3.0">
+                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="120.0" spacing="3.0">
                                     <children>
                                         <Label fx:id="player2" text="Player 2">
                                             <font>
@@ -97,6 +120,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
+                        <Label fx:id="turn2" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -112,7 +136,7 @@
                                         <Insets left="30.0" right="10.0" />
                                     </HBox.margin>
                                 </ImageView>
-                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="146.0" spacing="3.0">
+                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="120.0" spacing="3.0">
                                     <children>
                                         <Label fx:id="player3" text="Player 3">
                                             <font>
@@ -129,6 +153,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
+                        <Label fx:id="turn3" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -144,7 +169,7 @@
                                         <Insets left="30.0" right="10.0" />
                                     </HBox.margin>
                                 </ImageView>
-                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="146.0" spacing="3.0">
+                                <VBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="120.0" spacing="3.0">
                                     <children>
                                         <Label fx:id="player4" text="Player 4">
                                             <font>
@@ -161,6 +186,7 @@
                                         <Insets left="10.0" />
                                     </HBox.margin>
                                 </VBox>
+                        <Label fx:id="turn4" maxHeight="15.0" maxWidth="15.0" minHeight="25.0" minWidth="25.0" prefHeight="15.0" prefWidth="15.0" styleClass="turn" stylesheets="@../stylesheets/buttonstyle.css" />
                             </children>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
@@ -169,26 +195,6 @@
                     </children>
                 </VBox>
             </left>
-            <right>
-                <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="250.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onMouseClicked="#openChat" prefHeight="15.0" prefWidth="120.0" style="-fx-background-color: #edece1;" text="Chat">
-                            <VBox.margin>
-                                <Insets bottom="40.0" right="30.0" />
-                            </VBox.margin>
-                            <font>
-                                <Font name="Chalkboard" size="18.0" />
-                            </font>
-                            <effect>
-                                <DropShadow blurType="GAUSSIAN" height="10.0" radius="4.5" width="10.0" />
-                            </effect>
-                            <cursor>
-                                <Cursor fx:constant="HAND" />
-                            </cursor>
-                        </Button>
-                    </children>
-                </VBox>
-            </right>
          <center>
             <GridPane fx:id="board" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="1000.0" prefWidth="1000.0" style="-fx-background-color: #c4c4c4; -fx-background-radius: 10; -fx-border-color: #c4c4c4; -fx-border-width: 5; -fx-border-radius: 10;" BorderPane.alignment="CENTER">
               <columnConstraints>
@@ -230,6 +236,44 @@
                </BorderPane.margin>
             </GridPane>
          </center>
+         <right>
+            <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+               <children>
+                  <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" maxHeight="350.0" minHeight="350.0" style="-fx-background-color: fbf8da; -fx-background: FBF8DA; -fx-background-radius: 15; -fx-border-radius: 15;" vbarPolicy="NEVER" vvalue="1.0">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <content>
+                        <VBox fx:id="chat" alignment="BOTTOM_RIGHT" maxWidth="250.0" prefWidth="250.0">
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
+                  <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="5.0">
+                     <children>
+                        <TextArea fx:id="textArea" minHeight="35.0" prefHeight="35.0" prefWidth="240.0" promptText="Text Message" style="-fx-border-radius: 20; -fx-background-radius: 20; -fx-background-color: transparent;" wrapText="true">
+                           <font>
+                              <Font name="Chalkboard" size="14.0" />
+                           </font>
+                        </TextArea>
+                        <Button alignment="CENTER" maxHeight="20.0" maxWidth="25.0" minHeight="20.0" minWidth="25.0" mnemonicParsing="false" onMouseClicked="#sendMessage" prefHeight="20.0" prefWidth="25.0" style="-fx-border-radius: 7; -fx-background-radius: 7; -fx-background-color: #9AB6FF;" styleClass="arrow">
+                           <stylesheets>
+                              <URL value="@../stylesheets/buttonstyle.css" />
+                              <URL value="@../stylesheets/chatstyle.css" />
+                           </stylesheets>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor></Button>
+                     </children>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets bottom="30.0" right="30.0" />
+               </padding>
+            </VBox>
+         </right>
         </BorderPane>
         <BorderPane prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <left>
