#57 Implementation of System Messages

--- a/src/main/resources/stylesheets/chatstyle.css
+++ b/src/main/resources/stylesheets/chatstyle.css
@@ -17,6 +17,20 @@
     c -0.436089,3.14572 -2.890695,3.57304 -4.908212,4.67449 z";
 }
 
+.arrow{
+    -fx-shape: "M 8 5 L 11 6 L 8 7 C 8.03 6.6667 8.05 6.3333 8.07 6.1 L 9.3 6 L 8.07 5.9 C 8.05 5.5667 8.03 5.2833 8 5";
+}
+
+.textBubbleSystem{
+    -fx-background-color: #EDECE1;
+    -fx-background-insets: -5 -5 -5 -10;
+    -fx-background-radius: 7;
+    -fx-effect: dropshadow(three-pass-box,rgba(0,0,0,0.08),2,1.0,-0.5,-0.5);
+}
+
+
+
+
 .textBubbleOld{
     -fx-font-family: "Chalkboard";
     -fx-font-size: 14px;
@@ -39,10 +53,6 @@
     V 105.1123 c -0.4058,-3.73565 -2.47064,-4.56641 -5.14193,-4.90821 H 50.705033
     c -2.572701,0.2361 -4.604321,1.68288 -4.674488,4.90821 v 19.39913
     c -0.436089,3.14572 -2.890695,3.57304 -4.908212,4.67449 z";
-}
-
-.arrow{
-    -fx-shape: "M 8 5 L 11 6 L 8 7 C 8.03 6.6667 8.05 6.3333 8.07 6.1 L 9.3 6 L 8.07 5.9 C 8.05 5.5667 8.03 5.2833 8 5";
 }
 
 .arrowOld{
